// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@financial-times/x-gift-article renders a default Free article x-gift-article 1`] = `
<div
  className="GiftArticle_container__2eZcF"
>
  <form
    name="gift-form"
  >
    <fieldset
      className="o-forms GiftArticle_form__3a4SZ"
    >
      <div
        className="GiftArticle_title__1i_Hv GiftArticle_bold__2aMfD"
      >
        Share this article (free)
      </div>
      <div
        className="js-gift-article__url-section GiftArticle_url-section__ISfN-"
        data-section-id="nonGiftLink"
        data-trackable="nonGiftLink"
      >
        <input
          className="o-forms__text GiftArticle_url__bIcVi"
          disabled={false}
          name="non-gift-link"
          readOnly={true}
          type="text"
          value="https://www.ft.com/content/blahblahblah?shareType=nongift"
        />
        <div
          className="GiftArticle_message__3UjVE"
        >
          This article is currently 
          <span
            className="GiftArticle_bold__2aMfD"
          >
            free
          </span>
           for anyone to read
        </div>
        <div
          className="GiftArticle_buttons__1zOQK"
        >
          <a
            className="GiftArticle_buttonBaseStyle__2ViHW"
            href="mailto:?subject=Title%20Title%20Title%20Title&body=https%3A%2F%2Fwww.ft.com%2Fcontent%2Fblahblahblah%3FshareType%3Dnongift"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
          >
            Email link
          </a>
        </div>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`@financial-times/x-gift-article renders a default With a bad response from membership APIs x-gift-article 1`] = `
<div
  className="GiftArticle_container__2eZcF"
>
  <form
    name="gift-form"
  >
    <fieldset
      className="o-forms GiftArticle_form__3a4SZ"
    >
      <div
        className="GiftArticle_title__1i_Hv GiftArticle_bold__2aMfD"
      >
        Share this article (unable to fetch credits)
      </div>
      <div
        className="o-forms__group o-forms__group--inline GiftArticle_radio-button-section__qCYDb"
      >
        <input
          checked={true}
          className="o-forms__radio"
          id="giftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="giftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="giftLink"
        >
          with 
          <span
            className="GiftArticle_bold__2aMfD"
          >
            anyone
          </span>
           (uses 1 gift credit)
        </label>
        <input
          checked={false}
          className="o-forms__radio"
          id="nonGiftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="nonGiftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="nonGiftLink"
        >
          with 
          <span
            className="GiftArticle_bold__2aMfD"
          >
            other FT subscribers
          </span>
        </label>
      </div>
      <div
        className="js-gift-article__url-section GiftArticle_url-section__ISfN-"
        data-section-id="giftLink"
        data-trackable="giftLink"
      >
        <input
          className="o-forms__text GiftArticle_url__bIcVi"
          disabled={true}
          name="example-gift-link"
          readOnly={true}
          type="text"
          value="https://on.ft.com/gift_link"
        />
        <div
          className="GiftArticle_message__3UjVE"
        >
          You have 
          <span
            className="GiftArticle_bold__2aMfD"
          >
             gift article 
            credits
          </span>
           left this month
        </div>
        <div
          className="GiftArticle_buttons__1zOQK"
        >
          <button
            className="GiftArticle_buttonBaseStyle__2ViHW"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Create gift link
          </button>
        </div>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`@financial-times/x-gift-article renders a default With gift credits x-gift-article 1`] = `
<div
  className="GiftArticle_container__2eZcF"
>
  <form
    name="gift-form"
  >
    <fieldset
      className="o-forms GiftArticle_form__3a4SZ"
    >
      <div
        className="GiftArticle_title__1i_Hv GiftArticle_bold__2aMfD"
      >
        Share this article (with credit)
      </div>
      <div
        className="o-forms__group o-forms__group--inline GiftArticle_radio-button-section__qCYDb"
      >
        <input
          checked={true}
          className="o-forms__radio"
          id="giftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="giftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="giftLink"
        >
          with 
          <span
            className="GiftArticle_bold__2aMfD"
          >
            anyone
          </span>
           (uses 1 gift credit)
        </label>
        <input
          checked={false}
          className="o-forms__radio"
          id="nonGiftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="nonGiftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="nonGiftLink"
        >
          with 
          <span
            className="GiftArticle_bold__2aMfD"
          >
            other FT subscribers
          </span>
        </label>
      </div>
      <div
        className="js-gift-article__url-section GiftArticle_url-section__ISfN-"
        data-section-id="giftLink"
        data-trackable="giftLink"
      >
        <input
          className="o-forms__text GiftArticle_url__bIcVi"
          disabled={true}
          name="example-gift-link"
          readOnly={true}
          type="text"
          value="https://on.ft.com/gift_link"
        />
        <div
          className="GiftArticle_message__3UjVE"
        >
          You have 
          <span
            className="GiftArticle_bold__2aMfD"
          >
             gift article 
            credits
          </span>
           left this month
        </div>
        <div
          className="GiftArticle_buttons__1zOQK"
        >
          <button
            className="GiftArticle_buttonBaseStyle__2ViHW"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Create gift link
          </button>
        </div>
      </div>
    </fieldset>
  </form>
  <div
    className="o-share o-share--inverse MobileShareButtons_container__3eAtc"
    data-o-component="o-share"
  >
    <div
      className="GiftArticle_title__1i_Hv GiftArticle_bold__2aMfD"
    >
      Share on Social
    </div>
    <ul>
      <li
        className="o-share__action MobileShareButtons_button__17W-1"
        data-share="facebook"
      >
        <a
          className="o-share__icon o-share__icon--facebook MobileShareButtons_facebook__1ji2o"
          data-trackable="facebook"
          href="http://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.ft.com%2Fcontent%2Fblahblahblah&t=Title%20Title%20Title%20Title"
          rel="noopener"
        >
          Facebook 
          <span
            className="o-share__text"
          >
            (opens new window)
          </span>
        </a>
      </li>
      <li
        className="o-share__action MobileShareButtons_button__17W-1"
        data-share="twitter"
      >
        <a
          className="o-share__icon o-share__icon--twitter MobileShareButtons_twitter__1QRsw"
          data-trackable="twitter"
          href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.ft.com%2Fcontent%2Fblahblahblah&text=Title%20Title%20Title%20Title&via=financialtimes"
          rel="noopener"
        >
          Twitter 
          <span
            className="o-share__text"
          >
            (opens new window)
          </span>
        </a>
      </li>
      <li
        className="o-share__action MobileShareButtons_button__17W-1"
        data-share="linkedin"
      >
        <a
          className="o-share__icon o-share__icon--linkedin MobileShareButtons_linkedin__1-2-Y"
          data-trackable="linkedin"
          href="http://www.linkedin.com/shareArticle?mini=true&url=https%3A%2F%2Fwww.ft.com%2Fcontent%2Fblahblahblah&title=Title%20Title%20Title%20Title&source=Financial+Times"
          rel="noopener"
        >
          LinkedIn 
          <span
            className="o-share__text"
          >
            (opens new window)
          </span>
        </a>
      </li>
      <li
        className="o-share__action MobileShareButtons_button__17W-1 o-share__action--whatsapp"
        data-share="whatsapp"
      >
        <a
          className="o-share__icon o-share__icon--whatsapp MobileShareButtons_whatsapp__16VoZ"
          data-trackable="whatsapp"
          href="whatsapp://send?text=Title%20Title%20Title%20Title%20-%20https%3A%2F%2Fwww.ft.com%2Fcontent%2Fblahblahblah"
          rel="noopener"
        >
          Whatsapp 
          <span
            className="o-share__text"
          >
            (opens new window)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`@financial-times/x-gift-article renders a default With native share on App x-gift-article 1`] = `
<div
  className="GiftArticle_container__2eZcF"
>
  <form
    name="gift-form"
  >
    <fieldset
      className="o-forms GiftArticle_form__3a4SZ"
    >
      <div
        className="GiftArticle_title__1i_Hv GiftArticle_bold__2aMfD"
      >
        Share this article (on App)
      </div>
      <div
        className="o-forms__group o-forms__group--inline GiftArticle_radio-button-section__qCYDb"
      >
        <input
          checked={true}
          className="o-forms__radio"
          id="giftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="giftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="giftLink"
        >
          with 
          <span
            className="GiftArticle_bold__2aMfD"
          >
            anyone
          </span>
           (uses 1 gift credit)
        </label>
        <input
          checked={false}
          className="o-forms__radio"
          id="nonGiftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="nonGiftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="nonGiftLink"
        >
          with 
          <span
            className="GiftArticle_bold__2aMfD"
          >
            other FT subscribers
          </span>
        </label>
      </div>
      <div
        className="js-gift-article__url-section GiftArticle_url-section__ISfN-"
        data-section-id="giftLink"
        data-trackable="giftLink"
      >
        <input
          className="o-forms__text GiftArticle_url__bIcVi"
          disabled={true}
          name="example-gift-link"
          readOnly={true}
          type="text"
          value="https://on.ft.com/gift_link"
        />
        <div
          className="GiftArticle_message__3UjVE"
        >
          You have 
          <span
            className="GiftArticle_bold__2aMfD"
          >
             gift article 
            credits
          </span>
           left this month
        </div>
        <div
          className="GiftArticle_buttons__1zOQK"
        >
          <button
            className="GiftArticle_buttonBaseStyle__2ViHW"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Create gift link
          </button>
        </div>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`@financial-times/x-gift-article renders a default Without gift credits x-gift-article 1`] = `
<div
  className="GiftArticle_container__2eZcF"
>
  <form
    name="gift-form"
  >
    <fieldset
      className="o-forms GiftArticle_form__3a4SZ"
    >
      <div
        className="GiftArticle_title__1i_Hv GiftArticle_bold__2aMfD"
      >
        Share this article (without credit)
      </div>
      <div
        className="o-forms__group o-forms__group--inline GiftArticle_radio-button-section__qCYDb"
      >
        <input
          checked={true}
          className="o-forms__radio"
          id="giftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="giftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="giftLink"
        >
          with 
          <span
            className="GiftArticle_bold__2aMfD"
          >
            anyone
          </span>
           (uses 1 gift credit)
        </label>
        <input
          checked={false}
          className="o-forms__radio"
          id="nonGiftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="nonGiftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="nonGiftLink"
        >
          with 
          <span
            className="GiftArticle_bold__2aMfD"
          >
            other FT subscribers
          </span>
        </label>
      </div>
      <div
        className="js-gift-article__url-section GiftArticle_url-section__ISfN-"
        data-section-id="giftLink"
        data-trackable="giftLink"
      >
        <input
          className="o-forms__text GiftArticle_url__bIcVi"
          disabled={true}
          name="example-gift-link"
          readOnly={true}
          type="text"
          value="https://on.ft.com/gift_link"
        />
        <div
          className="GiftArticle_message__3UjVE"
        >
          You have 
          <span
            className="GiftArticle_bold__2aMfD"
          >
             gift article 
            credits
          </span>
           left this month
        </div>
        <div
          className="GiftArticle_buttons__1zOQK"
        >
          <button
            className="GiftArticle_buttonBaseStyle__2ViHW"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Create gift link
          </button>
        </div>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`@financial-times/x-podcast-launchers renders a default Example x-podcast-launchers 1`] = `
<div
  className="PodcastLaunchers_container__1418-"
  data-trackable="podcast-launchers"
>
  <h2
    className="PodcastLaunchers_headingChooseApp__19hr-"
  >
    Subscribe via your installed podcast app
  </h2>
  <ul
    className="PodcastLaunchers_podcastAppLinksWrapper__7W6dn"
  >
    <li>
      <a
        className="PodcastLaunchers_podcastAppLink__69RMR"
        data-trackable="apple-podcasts"
        href="podcast://access.acast.com/rss/therachmanreview/abc-123"
      >
        Apple Podcasts
      </a>
    </li>
    <li>
      <a
        className="PodcastLaunchers_podcastAppLink__69RMR"
        data-trackable="overcast"
        href="overcast://x-callback-url/add?url=https://access.acast.com/rss/therachmanreview/abc-123"
      >
        Overcast
      </a>
    </li>
    <li>
      <a
        className="PodcastLaunchers_podcastAppLink__69RMR"
        data-trackable="pocket-casts"
        href="pktc://subscribe/access.acast.com/rss/therachmanreview/abc-123"
      >
        Pocket Casts
      </a>
    </li>
    <li>
      <a
        className="PodcastLaunchers_podcastAppLink__69RMR"
        data-trackable="podcast-addict"
        href="podcastaddict://access.acast.com/rss/therachmanreview/abc-123"
      >
        Podcast Addict
      </a>
    </li>
    <li>
      <a
        className="PodcastLaunchers_podcastAppLink__69RMR"
        data-trackable="acast"
        href="acast://subscribe/https://access.acast.com/rss/therachmanreview/abc-123"
      >
        Acast
      </a>
    </li>
    <li
      className="PodcastLaunchers_rssUrlWrapper__vc1zt"
    >
      <span
        className="PodcastLaunchers_o-forms-input--suffix__rDClE PodcastLaunchers_o-forms-input--text__2jeJ0 PodcastLaunchers_o-forms-input__dI9dQ"
      >
        <input
          readOnly={true}
          type="text"
          value="https://access.acast.com/rss/therachmanreview/abc-123"
        />
        <button
          className="PodcastLaunchers_rssUrlCopyButton__2_4c0"
          data-trackable="copy-rss"
          data-url="https://access.acast.com/rss/therachmanreview/abc-123"
          onClick={[Function]}
          type="button"
        >
          Copy RSS
        </button>
      </span>
    </li>
  </ul>
  <div
    className="podcast-launchers__no-app-wrapper PodcastLaunchers_noAppWrapper__3AbOY"
  >
    <h2
      className="PodcastLaunchers_headingNoApp__3uLqT"
    >
      Can’t see your podcast app?
    </h2>
    <p
      className="PodcastLaunchers_textNoApp__lmVJ1"
    >
      Get updates for new episodes
    </p>
    <form
      action="/__myft/api/core/followed/concept/e0f2acb4-4177-436d-a783-b8c80ec2a6ac?method=put"
      data-concept-id="e0f2acb4-4177-436d-a783-b8c80ec2a6ac"
      method="GET"
      onSubmit={[Function]}
    >
      <input
        data-myft-csrf-token={true}
        name="token"
        type="hidden"
        value="token"
      />
      <button
        aria-label="Add Rachman Review to myFT"
        aria-pressed="false"
        className="main_button__3Mk67"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Add to myFT",
          }
        }
        data-concept-id="e0f2acb4-4177-436d-a783-b8c80ec2a6ac"
        data-trackable="follow"
        data-trackable-context-messaging={null}
        title="Add Rachman Review to myFT"
        type="submit"
      />
    </form>
  </div>
</div>
`;

exports[`@financial-times/x-styling-demo renders a default Styling x-styling-demo 1`] = `
<button
  className="Button_button__vS7Mv"
>
  Click me!
</button>
`;
